Potential carousel nav on mobile fix 4

--- a/dobbinsDogs.css
+++ b/dobbinsDogs.css
@@ -352,7 +352,7 @@ textarea{
 		transform: translateY(60px);
 	}
 	.carouselIndicator{
-		height: 13px;
+		height: 12px;
 	}
 }
 @media only screen and (max-width: 710px){
